# investidor-ia

./: .env.example  .gitignore  README.md  TODOs.txt  app.py  main.py  pyproject.toml  ruff.toml
.streamlit/: config.toml
exemplos/: barsi-BBAS3.md  buffett-ITUB4.md  graham-BHIA3.md
pages/: _utils.py  chat.py  generate.py  reports.py  settings.py
src/: cache.py  llm.py  main.py  settings.py  utils.py
src/agents/: _base.py  base.py
src/agents/analysts/: earnings_release.py  earnings_release_analyst.py  financial.py  financial_analyst.py  news.py  news_analyst.py  technical.py  valuation.py  valuation_analyst.py
src/agents/investors/: barsi.py  buffett.py  graham.py
src/b3/: __init__.py
src/chat/: agent.py  tools.py
src/data/: stocks.py
src/data/_sources/: b3.py  fundamentus.py  statusinvest.py
src/fundamentus/: __init__.py
src/statusinvest/: __init__.py
