[project]
name = "investidor-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "google-genai>=1.5.0",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.36",
    "pydantic-ai-slim[duckduckgo]>=0.0.36",
    "pymupdf>=1.25.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "unidecode>=1.3.8",
    "yfinance>=0.2.54",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
